# banxico_mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  banxico_mcp_server.py  banxico_usd_mxn_endpoints.md  blog_post_building_mcp_servers.md  docker-compose.yml  healthcheck.py  mcp_server_instructions.md  pyproject.toml
docs/: EXTENDING.md  MCP_SERVER_DEVELOPMENT_GUIDE.md
docs/examples/: claude-desktop.md  continue.md  env-template.md  gemini-cli.md  vscode-cline.md
docs/plans/: 2025-02-05-docker-coolify-deployment-design.md  2025-02-05-docker-coolify-implementation.md
